tests/fail/01-struct.rs
use dialogue_core::Asker;
#[derive(Asker)]
struct User(String);

fn main() {}
