tests/fail/01-struct.stderr
error: only support named struct
 --> tests/fail/01-struct.rs:2:10
  |
2 | #[derive(Asker)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Asker` (in Nightly builds, run with -Z macro-backtrace for more info)
